# my-ai

./: .gitignore  Makefile  Modelfile  README.md  ROADMAP.md  ai_memory_system.py  cli.py  pyproject.toml  test_explicit_memory.py
.github/: copilot-instructions.md
ai_memory.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
docs/: CHROMA_INTEGRATION.md  memory-flow.mmd
my_ai/: __init__.py  embedding_cache.py  memory.py
my_ai/vector_backends/: __init__.py  chroma_adapter.py
scripts/: example_perf_demo.py  migrate_to_chroma.py
tests/: conftest.py  test_chroma_adapter.py  test_chroma_integration.py  test_cli_e2e.py  test_cli_import_stats_explain.py  test_explicit_memory.py  test_generate_response_live_ollama.py  test_generate_response_prompt.py  test_memory_context.py  test_performance_improvements.py
